# opencode-async-agents

./: .dockerignore  .env.example  .gitignore  :memory:  =1.9.4  AGENTS.md  AUTHENTICATION_LOAD_TEST_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNICATION_OPTIMIZATION_SUMMARY.md  COMMUNICATION_VALIDATION_SUMMARY.md  COMPREHENSIVE_E2E_VALIDATION_REPORT.md  COMPREHENSIVE_E2E_VALIDATION_REPORT_20250809_113652.md  COMPREHENSIVE_PRODUCTION_MONITORING_VALIDATION_REPORT.md  COMPREHENSIVE_STRESS_TEST_REPORT.md  CONCURRENCY_ANALYSIS_REPORT.md  CONFIGURATION_CLEANUP_SUMMARY.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  Dockerfile  ENHANCED_CONCURRENCY_REPORT.md  ERROR_HANDLING_SUMMARY.md  EXECUTIVE_SUMMARY_FINAL_SYSTEM_VALIDATION.md  FINAL_COMMUNICATION_OPTIMIZATION_REPORT.md  FINAL_COMPREHENSIVE_API_VALIDATION_REPORT.md  FINAL_COMPREHENSIVE_API_VALIDATION_RESULTS.json  FINAL_COMPREHENSIVE_SYSTEM_INTEGRATION_VALIDATION_REPORT_20250809_120748.md  FINAL_COMPREHENSIVE_SYSTEM_INTEGRATION_VALIDATION_SUMMARY.md  FINAL_COMPREHENSIVE_VALIDATION_REPORT.md  FINAL_PRODUCTION_READINESS_VALIDATION_REPORT_20250809_121041.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_FIXES_SUMMARY.md  LICENSE  MAINTAINERS.md  MONITORING_INTEGRATION_ALIGNMENT_VALIDATION_REPORT.md  MONITORING_SYSTEM_TEST_REPORT.md  NOTICE  (+83 more)
.bmad-core/: install-manifest.yaml
.compliance/: README.md  SBOM.spdx.json  gitleaks.sarif
config/: README.md  config_loader.py  manage_config.py  models_config.json  performance_config.yaml  validate_config.py  websocket_config.py
data/: monitoring_metrics.db
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  MONITORING_SYSTEM_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  README.md  SCRIPTS_ORGANIZATION_SUMMARY.md  STATIC_EMPLOYEE_TYPES.md  TECHNICAL_ARCHITECTURE.md  TELEGRAM_CONFLICT_SOLVED.md  TROUBLESHOOTING.md  USER_GUIDE.md  implementation-steps.md  prd-agent-memory-system.md  prd-project-root.md  prd-server-client-architecture.md  project-root-enhancement-summary.md  telegram-to-websocket-migration-plan.md  websocket-architecture.md  websocket-migration-implementation.md
frontend/: README-ADVANCED-FEATURES.md  package.json
migration_backup/: chat_config.py  config.yaml
(+276 files in other folders)
